Fixed nav bar overflow; made text more readable

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*MENU BAR*/
 
 *{
-  padding:0;
-  margin:0;
-  box-sizing: border-box;
+    padding:0;
+    margin:0;
+    box-sizing: border-box;
 }
 
 
@@ -20,12 +20,16 @@ li {
 .nav {
     width: 100%;
     text-align: center;
-    list-style:none inside;
+    list-style: none inside;
     margin:0;
     transition: top 0.3s;
-    position:relative;
-     display: inline-block;
-     padding-left: 10%;
+    position: relative;
+    display: inline-block;
+    padding-left: 15%;
+    
+    padding-bottom: 50px;
+    overflow:inherit;
+    
 }
 
 
@@ -57,8 +61,6 @@ li {
 
 .nav li ul li {
     display: block;
-  
-    
 }
 
 .nav li:hover ul {
@@ -69,42 +71,40 @@ li {
 }
 
 .nav li> a {
- 
-  vertical-align: top;
-  color: white;
-  font-family: sans-serif;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-font-size: 20px;
+    vertical-align: top;
+    color: white;
+    font-family: sans-serif;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 20px;
 }
 
 .nav li li> a {
- 
-  vertical-align: top;
-  color: white;
-  font-family: sans-serif;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-font-size: 15px;
+    vertical-align: top;
+    color: white;
+    font-family: sans-serif;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 15px;
     text-align: center;
 }
 
 
 @media only screen and (max-width: 600px) { 
     .nav li> a {
-        font-size: 10px;
+        font-size: 20px;
 
     }
     
     .nav li li> a {
- 
- 
-font-size: 10px;
-    text-align: center;
-}
-    
+        font-size: 15px;
+        text-align: center;
+    }
+    .nav {
+        padding-left: 6%;
+    }
 }
 
 
